--- a/NMSTools.Framework/NMSTools.Framework.csproj
+++ b/NMSTools.Framework/NMSTools.Framework.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converters\DoubleConverter.cs" />
+    <Compile Include="Converters\BaseConverter.cs" />
     <Compile Include="Converters\PathConverter.cs" />
     <Compile Include="Converters\Vector2Converter.cs" />
     <Compile Include="Converters\Vector3Converter.cs" />
